Fixed up testimonial position on small screen

--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -80,9 +80,8 @@ body.slug .content {
   width: 50%;
   right: 1rem;
   @media (max-width: 550px) {
-    top: auto;
+    top: 200px;
     left: 1rem;
-    bottom: 2rem;
     width: auto;
     opacity: 0.8;
   }
